# Deep_Object_Pose

./: .gitignore  readme.md
config/: config_pose.yaml
dope/: package.xml  requirements.txt  setup.cfg  setup.py
dope/dope/: dope_node.py
dope_launch/: CMakeLists.txt  package.xml
dope_launch/config/: camera_info.yaml  config_pose.yaml
dope_launch/launch/: camera.launch  dope_launch.py
